--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rustyline = { version = "9.1.2", optional = true }
+thiserror = "1.0.38"
 
 [[bin]]
 name = "zkdsl"
