--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 rustyline = { version = "9.1.2", optional = true }
 thiserror = "1.0.38"
+num-bigint = "0.4"
 
 [[bin]]
 name = "zkdsl"
